sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: illegal start of simple pattern
  var= inversion=true;
     ^AlgCombSort:3: error: '=' expected but ';' found.
  var= inversion=true;
                     ^