sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var= inversion=true;
  var ecart = getNombreValeurs();
  do {
    inversion = false;
    if (ecart>1) {
      ecart = ecart/1.3;
    }
    i=0;
    while (i+ecart < getNombreValeurs()) {
      if (plusPetit(i+1,i)) {
        echange(i,i+1);
        inversion=true;
      }
      i=i+1;
    }
  } while (ecart>1||inversion)
}